First cards project HTML structure, fixed menu css class

--- a/index.html
+++ b/index.html
@@ -12,12 +12,38 @@
 
 <body>
 
-    <div class="box">
-        <a href="#" class="link one">Project 1</a>
+    <div class="menu">
+        <a href="#" class="link one">Cards 1</a>
         <a href="#" class="link two">Project 2</a>
         <a href="#" class="link three">Project 3</a>
         <a href="#" class="link four">Project 4</a>
         <a href="#" class="link five">Project 5</a>
+    </div>
+
+    <div class="cards" id="cards">
+
+        <div class="card one">
+            <button><i class="far fa-question-circle"></i></button>
+            <h1>CEO</h1>
+            <h2>Anna Kowalska</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, itaque excepturi eveniet veritatis
+                molestias aut minima ipsa eaque officiis facilis nam necessitatibus quis quidem vel non dolore ipsum
+                impedit.
+            </p>
+        </div>
+
+        <div class="card two">
+            <button><i class="far fa-question-circle"></i></button>
+            <h1>HR</h1>
+            <h2>Jan Nowak</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, itaque excepturi eveniet veritatis
+                molestias aut minima ipsa eaque officiis facilis nam necessitatibus quis quidem vel non dolore ipsum
+                impedit.
+            </p>
+        </div>
+
     </div>
 
 </body>
