Styles for cards 1 project

--- a/index.html
+++ b/index.html
@@ -24,24 +24,30 @@
 
         <div class="card one">
             <button><i class="far fa-question-circle"></i></button>
-            <h1>CEO</h1>
-            <h2>Anna Kowalska</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, itaque excepturi eveniet veritatis
-                molestias aut minima ipsa eaque officiis facilis nam necessitatibus quis quidem vel non dolore ipsum
-                impedit.
-            </p>
+            <div class="text">
+                <h1>CEO</h1>
+                <h2>Anna Kowalska</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, itaque excepturi eveniet
+                    veritatis
+                    molestias aut minima ipsa eaque officiis facilis nam necessitatibus quis quidem vel non dolore ipsum
+                    impedit.
+                </p>
+            </div>
         </div>
 
         <div class="card two">
             <button><i class="far fa-question-circle"></i></button>
-            <h1>HR</h1>
-            <h2>Jan Nowak</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, itaque excepturi eveniet veritatis
-                molestias aut minima ipsa eaque officiis facilis nam necessitatibus quis quidem vel non dolore ipsum
-                impedit.
-            </p>
+            <div class="text">
+                <h1>HR</h1>
+                <h2>Jan Nowak</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, itaque excepturi eveniet
+                    veritatis
+                    molestias aut minima ipsa eaque officiis facilis nam necessitatibus quis quidem vel non dolore ipsum
+                    impedit.
+                </p>
+            </div>
         </div>
 
     </div>
