CSS selectors fix, HTML structure for cards 2 project

--- a/index.html
+++ b/index.html
@@ -14,10 +14,46 @@
 
     <div class="menu">
         <a href="#" class="link one">Cards 1</a>
-        <a href="#" class="link two">Project 2</a>
+        <a href="#" class="link two">Cards 2</a>
         <a href="#" class="link three">Project 3</a>
         <a href="#" class="link four">Project 4</a>
         <a href="#" class="link five">Project 5</a>
+    </div>
+
+    <div class="cards-2">
+        <div class="card">
+            <div class="img one">
+
+            </div>
+            <div class="text text-one">
+                <h3>Las zielony</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
+                    necessitatibus
+                    tempore? Eveniet consectetur recusandae animi quaerat!</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="img two">
+
+            </div>
+            <div class="text text-two">
+                <h3>Park narodowy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
+                    necessitatibus
+                    tempore? Eveniet consectetur recusandae animi quaerat!</p>
+            </div>
+        </div>
+        <!-- <div class="card">
+            <div class="img three">
+
+            </div>
+            <div class="text text-three">
+                <h3>Pustynia</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
+                    necessitatibus
+                    tempore? Eveniet consectetur recusandae animi quaerat!</p>
+            </div>
+        </div> -->
     </div>
 
     <div class="cards" id="cards">
