--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     tempore? Eveniet consectetur recusandae animi quaerat!</p>
             </div>
         </div>
-        <!-- <div class="card">
+        <div class="card">
             <div class="img three">
 
             </div>
@@ -53,7 +53,7 @@
                     necessitatibus
                     tempore? Eveniet consectetur recusandae animi quaerat!</p>
             </div>
-        </div> -->
+        </div>
     </div>
 
     <div class="cards" id="cards">
