Few general fixes and translation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             </div>
             <div class="text text-one">
-                <h3>Las zielony</h3>
+                <h3>Green Forest</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
                     necessitatibus
                     tempore? Eveniet consectetur recusandae animi quaerat!</p>
@@ -37,10 +37,10 @@
 
             </div>
             <div class="text text-two">
-                <h3>Park narodowy</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
-                    necessitatibus
-                    tempore? Eveniet consectetur recusandae animi quaerat!</p>
+                <h3>National Park/h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
+                        necessitatibus
+                        tempore? Eveniet consectetur recusandae animi quaerat!</p>
             </div>
         </div>
         <div class="card">
@@ -48,7 +48,7 @@
 
             </div>
             <div class="text text-three">
-                <h3>Pustynia</h3>
+                <h3>Desert</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
                     necessitatibus
                     tempore? Eveniet consectetur recusandae animi quaerat!</p>
