HTML tag closing fix

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
             </div>
             <div class="text text-two">
-                <h3>National Park/h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
-                        necessitatibus
-                        tempore? Eveniet consectetur recusandae animi quaerat!</p>
+                <h3>National Park</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, iure! Saepe quaerat magnam
+                    necessitatibus
+                    tempore? Eveniet consectetur recusandae animi quaerat!</p>
             </div>
         </div>
         <div class="card">
