--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <div class="cards" id="cards">
+    <div class="cards">
 
         <div class="card one">
             <button><i class="far fa-question-circle"></i></button>
