Initial styles and HTML for cards 3 project

--- a/index.html
+++ b/index.html
@@ -15,9 +15,27 @@
     <div class="menu">
         <a href="#" class="link one">Cards 1</a>
         <a href="#" class="link two">Cards 2</a>
-        <a href="#" class="link three">Project 3</a>
+        <a href="#" class="link three">Cards 3</a>
         <a href="#" class="link four">Project 4</a>
         <a href="#" class="link five">Project 5</a>
+    </div>
+
+    <div class="cards-3">
+        <div class="card">
+            <div class="text">Welcome!</div>
+            <h1>
+                <span>W</span>
+                <span>E</span>
+                <span>L</span>
+                <span>C</span>
+                <span>O</span>
+                <span>M</span>
+                <span>E</span>
+                <span>!</span>
+            </h1>
+            <div class="bg-img"></div>
+            <img src="./img/woman.png" alt="Woman with a mug">
+        </div>
     </div>
 
     <div class="cards-2">
