Animating background and girl for cards 3 project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span>!</span>
             </h1>
             <div class="bg-img"></div>
-            <img src="./img/woman.png" alt="Woman with a mug">
+            <img src="./img/woman.png" class="girl" alt="Woman with a mug">
         </div>
     </div>
 
