Animating date for cards 3 project

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <span>E</span>
                 <span>!</span>
             </h1>
+            <p class="text"></p>
             <div class="bg-img"></div>
             <img src="./img/woman.png" class="girl" alt="Woman with a mug">
         </div>
