Buttons project init

--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
         <a href="#" class="link one">Cards 1</a>
         <a href="#" class="link two">Cards 2</a>
         <a href="#" class="link three">Cards 3</a>
-        <a href="#" class="link four">Project 4</a>
+        <a href="#" class="link four">Buttons</a>
         <a href="#" class="link five">Project 5</a>
+    </div>
+
+    <div class="buttons">
+        <button class="slide">
+            <span class="span1">slide</span>
+            <span class="span2">😀</span>
+        </button>
+        <button class="slice">slice</button>
+        <button class="hmm">hmm</button>
+        <button class="border">border</button>
+        <button class="glass">glass</button>
     </div>
 
     <div class="cards-3">
