--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
     <div class="menu">
-        <a href="#" class="link one">Cards 1</a>
-        <a href="#" class="link two">Cards 2</a>
-        <a href="#" class="link three">Cards 3</a>
-        <a href="#" class="link four">Buttons</a>
-        <a href="#" class="link five">Project 5</a>
+        <a href="#" class="link one">Cards</a>
+        <a href="#" class="link two">Buttons</a>
+        <a href="#" class="link three">Option 3</a>
+        <a href="#" class="link four">Option 4</a>
+        <a href="#" class="link five">Option 5</a>
     </div>
 
     <div class="buttons">
