Navigation project init

--- a/index.html
+++ b/index.html
@@ -15,9 +15,62 @@
     <div class="menu">
         <a href="#" class="link one">Cards</a>
         <a href="#" class="link two">Buttons</a>
-        <a href="#" class="link three">Option 3</a>
+        <a href="#" class="link three">navigation</a>
         <a href="#" class="link four">Option 4</a>
         <a href="#" class="link five">Option 5</a>
+    </div>
+
+    <div class="navigation">
+
+        <nav>
+            <ul class="menu-2">
+                <li class="menu-item">
+                    Position 1
+                    <ul class="dropdown">
+                        <li>Link nr. 1</li>
+                        <li>Link nr. 2</li>
+                        <li>Link nr. 3</li>
+                        <li>Link nr. 4</li>
+                        <li>Link nr. 5</li>
+                        <li>Link nr. 6</li>
+                    </ul>
+                </li>
+                <li class="menu-item two">
+                    Position 2
+                    <ul class="dropdown">
+                        <li>Link nr. 1</li>
+                        <li>Link nr. 2</li>
+                        <li>Link nr. 3</li>
+                        <li>Link nr. 4</li>
+                        <li>Link nr. 5</li>
+                        <li>Link nr. 6</li>
+                    </ul>
+                </li>
+                <li class="menu-item three">
+                    Position 3
+                    <ul class="dropdown">
+                        <li>Link nr. 1</li>
+                        <li>Link nr. 2</li>
+                        <li>Link nr. 3</li>
+                        <li>Link nr. 4</li>
+                        <li>Link nr. 5</li>
+                        <li>Link nr. 6</li>
+                    </ul>
+                </li>
+                <li class="menu-item four">
+                    Position 4
+                    <ul class="dropdown">
+                        <li>Link nr. 1</li>
+                        <li>Link nr. 2</li>
+                        <li>Link nr. 3</li>
+                        <li>Link nr. 4</li>
+                        <li>Link nr. 5</li>
+                        <li>Link nr. 6</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
     </div>
 
     <div class="buttons">
